Fixes stretched image rendering
Not sure what the issue is, or why I didn't see this before. Maybe a cross-platform issue?

--- a/index.css
+++ b/index.css
@@ -92,6 +92,7 @@ col {
 .form-table .image {
   width: 100%;
   max-height: 100px;
+  object-fit: contain;
 }
 
 .form-table .description {
